Fixed VCard's nowrap // #72

--- a/reframe/views/profile/leftpanel/VCard.css
+++ b/reframe/views/profile/leftpanel/VCard.css
@@ -17,3 +17,7 @@
   white-space: nowrap;
   float: left;
 }
+
+.vcard-stars {
+  white-space: nowrap;
+}
